# llms_from_scratch_book

./: .gitignore  README.md  pyproject.toml
notebooks/: finetunning.ipynb  previous_chapters.py
notebooks/ch05/: main.ipynb  previous_chapters.py
notebooks/ch06/: finetunning.ipynb  gpt_download.py
